--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,11 +25,12 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 ext {
-    compileSdkVersion = 27
-    buildToolsVersion = "27.0.0"
-    supportVersion = "27.0.2"
-    minSdkVersion = 14
-    targetSdkVersion = 27
+    minSdkVersion = 16
+    targetSdkVersion = 28
+    compileSdkVersion = 'android-28'
+    buildToolsVersion = '28.0.3'
+
+    supportLibraryVersion = '28.0.0'
     versionCode = 1
     versionName = "0.0.1"
 }
